<?xml version="1.0"?>
<package format="2">
  <name>prm</name>
  <version>0.0.0</version>
  <description>The prm package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="olann@stud.ntnu.no">Ola Nystein</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>NTNU</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>message_runtime</depend>
  <depend>rimapp_msgs</depend>
  <depend>tf</depend>
  <depend>kdtree</depend>
  <depend>image_geometry</depend>
  <depend>image_proc</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>voxblox_ros</depend>
  <depend>planner_common</depend>

  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
