<?xml version="1.0"?>
<package format="2">
  <name>rimapp_msgs</name>
  <version>0.0.0</version>
  <description>The rimapp_msgs package</description>


  <maintainer email="olann@stud.ntnu.no">Ola Nystein</maintainer>



  <license>NTNU</license>



  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>

 
</package>
